ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: afristocks
  namespace: afristocks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - afristocks.eu
      secretName: afristocks-tls
  rules:
    - host: afristocks.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: afristocks
                port:
                  number: 80
